--- a/2-advance/index.html
+++ b/2-advance/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>issue-2</title>
+    <title>2-advance</title>
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
